add js open modal search

--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>olx-1</title>
-    <link rel="stylesheet" href="./sсss/main.css">
-
+    <link rel="stylesheet" href="./sсss/main.css" />
 
     <!-- Don't forget to delete this style tag. -->
     <!-- <style>
@@ -37,16 +36,14 @@
   </head>
 
   <body>
-${require('./partials/header.html')}
-${require('./partials/footer.html')}
-
-
+    ${require('./partials/header.html')} ${require('./partials/footer.html')}
+    ${require('./partials/modal-search.html')}
 
     <!-- <article class="intro"> -->
-      <!-- <h1>Webpack starter kit</h1> -->
+    <!-- <h1>Webpack starter kit</h1> -->
 
-      <!-- HTML image reference example. -->
-      <!-- <img src="./images/intro.png" alt="" width="640" /> -->
+    <!-- HTML image reference example. -->
+    <!-- <img src="./images/intro.png" alt="" width="640" /> -->
     <!-- </article> -->
   </body>
 </html>
