--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,9 @@
   </head>
 
   <body>
-    ${require('./partials/header.html')} ${require('./partials/footer.html')}
+    ${require('./partials/header.html')}
+    ${require('./partials/main-container.html')}
+    ${require('./partials/footer.html')}
     ${require('./partials/modal-search.html')}
 
     <!-- <article class="intro"> -->
