--- a/src/index.html
+++ b/src/index.html
@@ -40,6 +40,8 @@
     ${require('./partials/main-container.html')}
     ${require('./partials/footer.html')}
     ${require('./partials/modal-search.html')}
+    ${require('./partials/modal-authorization.html')}
+    ${require('./partials/modal-logout.html')}
 
     <!-- <article class="intro"> -->
     <!-- <h1>Webpack starter kit</h1> -->
