add modal add and render category

--- a/src/index.html
+++ b/src/index.html
@@ -42,6 +42,7 @@
     ${require('./partials/modal-search.html')}
     ${require('./partials/modal-authorization.html')}
     ${require('./partials/modal-logout.html')}
+    ${require('./partials/modal-add.html')}
 
     <!-- <article class="intro"> -->
     <!-- <h1>Webpack starter kit</h1> -->
